[#187456042] Removed checks to cloud (#22)
* [#187456042] Removed checks to cloud

* [#187456042] addressed code review